<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1"
            android:fontFamily="@font/source_sans_pro"
            android:letterSpacing="0.04"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/profile" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/card_view"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_balance"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/payColor"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/coin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/topColor"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/transfer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/walletColor"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/transaction"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:letterSpacing="0.02"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/see_all"
            android:textSize="23sp"
            android:textColor="@color/text2Color"
            android:gravity="end"
            android:layout_marginEnd="25dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/i1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/netflix"/>

            <TextView
                android:id="@+id/tt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netflix"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/source_sans_pro"
                android:layout_toRightOf="@id/i1"
                android:layout_marginLeft="20dp"
                android:letterSpacing="0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date1"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:layout_toEndOf="@id/i1"
                android:layout_below="@id/tt1"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay1"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/textColor"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:layout_below="@id/r1">

            <ImageView
                android:id="@+id/i2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/spotify"/>

            <TextView
                android:id="@+id/tt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spotify"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/source_sans_pro"
                android:layout_toEndOf="@id/i2"
                android:layout_marginStart="20dp"
                android:letterSpacing="0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date2"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:layout_toEndOf="@id/i2"
                android:layout_below="@id/tt2"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay2"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/textColor"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:layout_below="@id/r2">

            <ImageView
                android:id="@+id/i3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/dribble"/>

            <TextView
                android:id="@+id/tt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dribble"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/source_sans_pro"
                android:layout_toEndOf="@id/i3"
                android:layout_marginStart="20dp"
                android:letterSpacing="0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date3"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:layout_toEndOf="@id/i3"
                android:layout_below="@id/tt3"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay3"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/textColor"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:layout_below="@id/r3">

            <ImageView
                android:id="@+id/i4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/amazon"/>

            <TextView
                android:id="@+id/tt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazon"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/source_sans_pro"
                android:layout_toEndOf="@id/i4"
                android:layout_marginStart="20dp"
                android:letterSpacing="0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date4"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:layout_toEndOf="@id/i4"
                android:layout_below="@id/tt4"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay4"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/textColor"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>


        </RelativeLayout>


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cardElevation="20dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/home"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/chat"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/notification"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/user"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>